--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.mvc.view.suffix: .jsp
 ## PostgreSQL-settings - Kanskje passord er "pass"?
 spring.datasource.url=jdbc:postgresql://ider-database.westeurope.cloudapp.azure.com:5432/h600883
 spring.datasource.username=h600883
-spring.datasource.password=Fotball123
+spring.datasource.password=####
